Updated tests for JsonReader class