@@ -6,8 +6,7 @@ import model.Player;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
-import java.util.LinkedList;
-import java.util.TreeSet;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -43,10 +42,10 @@ public class JsonReaderTest extends JsonTest {
         JsonReader reader = new JsonReader("./data/testReaderGeneralCompletedLevelStats.json");
         try {
             Player player = reader.read();
-            LinkedList<TreeSet<LevelStats>> statsList = player.getCompletedLevelStats();
+            List<List<LevelStats>> statsList = player.getCompletedLevelStats();
             assertEquals(2, statsList.get(0).size());
-            checkLevelStats("level Z", 2, 3.0, statsList.get(0).first());
-            checkLevelStats("level F", 20, 6.3, statsList.get(0).last());
+            checkLevelStats("level Z", 2, 3.0, statsList.get(0).getFirst());
+            checkLevelStats("level F", 20, 6.3, statsList.get(0).getLast());
         } catch (IOException e) {
             fail("Couldn't read from file");
         }
